--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
     text-shadow: -0.042em 0.042em theme('colors.red.500');
     -webkit-text-stroke: 0.027em theme('colors.sky.300');
 
-    /* Replace text-stroke with base color for IE10/11 */
+    /* Replace text-stroke with base colour for IE10/11 */
     @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
       -webkit-text-stroke: 0;
 
@@ -17,7 +17,7 @@
       }
     }
 
-    /* Replace text-stroke */
+    /* Replace text-stroke with base colour for pre-Chromium Edge */
     @supports (-ms-accelerator: true) {
       -webkit-text-stroke: 0;
 
@@ -47,4 +47,9 @@
       }
     }
   }
+}
+
+/* Adjust alignment of font-awesome icons */
+.svg-inline--fa {
+  vertical-align: text-bottom;
 }
