--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,7 +41,7 @@
   }
 
   .link {
-    @apply border-sky-400 border-b-2 hover:border-b-4 transition-all font-semibold;
+    @apply border-sky-400 border-b hover:border-b-4 transition-all duration-100;
   }
 
   .button {
