--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,6 +56,12 @@
       }
     }
   }
+
+  .text-center {
+    ul {
+      @apply list-inside;
+    }
+  }
 }
 
 /* Adjust alignment of font-awesome icons */
